fix hero spacing

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -41,7 +41,7 @@
     display: flex;
     flex-direction: column;
     padding: var(--container-padding);
-    gap: var(--spacing-40);
+    gap: var(--spacing-60);
     z-index: 1000;
     /* border-bottom: 1px solid var(--border-divider); */
 }
